--- a/scss/components/_sidebar-actors.scss
+++ b/scss/components/_sidebar-actors.scss
@@ -11,6 +11,10 @@
 			&.folder {
 				@extend %folder;
 			}
+
+			.actor-profile {
+				object-position: 50% 0;
+			}
 		}
 	}
 }
